--- a/src/app/add-contact/add-contact.component.html
+++ b/src/app/add-contact/add-contact.component.html
@@ -8,69 +8,112 @@
   <div class="row" >
     <div class="col-sm-6">
         <label>First Name* <span style="color: red">(Mandatory)</span></label>
-      <input type="text" class="form-control"  [(ngModel)]="model.cd_first_name" name="cd_first_name" autofocus required>
+      <input type="text" 
+             class="form-control"  
+             [(ngModel)]="model.cd_first_name" 
+             name="cd_first_name" 
+             autofocus 
+             required
+             >
     </div>
     <div class="col-sm-6">
         <label>Last Name* <span style="color: red">(Mandatory)</span></label>
-      <input type="text" class="form-control"  [(ngModel)]="model.cd_last_name" name="cd_last_name" required>
+      <input type="text" 
+             class="form-control"  
+             [(ngModel)]="model.cd_last_name" 
+             name="cd_last_name" 
+             required
+             >
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6">
       <label>Mobile No.*  <span style="color: red">(enter 10 digits no.)</span></label>
-      <input type="text" class="form-control"  [(ngModel)]="model.cd_mobile_number" name="cd_mobile_number" required
-      pattern="[0-9]*"
-   minlength="10"
-   maxlength="10"/>
+      <input type="text" 
+             class="form-control"  
+             [(ngModel)]="model.cd_mobile_number" 
+             name="cd_mobile_number" 
+             required
+             pattern="[0-9]*"
+             minlength="10"
+             maxlength="10"
+             />
     </div>
     <div class="col-sm-6">
         <label>Email id* <span style="color: red">(like xyz@abc.com)</span></label>
-      <input type="email" class="form-control"  [(ngModel)]="model.cd_email_id" name="cd_email_id" required 
-      pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+      <input type="email" 
+             class="form-control"  
+             [(ngModel)]="model.cd_email_id" 
+             name="cd_email_id" 
+             required 
+             pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+             >
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6">
         <label>Address</label>
-      <input type="text" class="form-control"  [(ngModel)]="model.cd_address" name="cd_address">
+      <input type="text" 
+             class="form-control"  
+             [(ngModel)]="model.cd_address" 
+             name="cd_address"
+             >
     </div>
     <div class="col-sm-6">
         <label>City</label>
-      <input type="text" class="form-control"  [(ngModel)]="model.cd_city" name="cd_city">
+      <input type="text" 
+             class="form-control"  
+             [(ngModel)]="model.cd_city" 
+             name="cd_city"
+             >
     </div>
   </div>
   <div class="row">
       <div class="col-sm-6">
           <label>State</label>
-        <input type="text" class="form-control"  [(ngModel)]="model.cd_state" name="cd_state">
+        <input type="text" 
+               class="form-control"  
+               [(ngModel)]="model.cd_state" 
+               name="cd_state"
+               >
       </div>
     <div class="col-sm-6">
         <label>Zip Code (enter no.)</label>
-      <input type="text" class="form-control"  [(ngModel)]="model.cd_zip_code" name="cd_zip_code" pattern="[0-9]*">
+      <input type="text" 
+             class="form-control"  
+             [(ngModel)]="model.cd_zip_code" 
+             name="cd_zip_code" 
+             pattern="[0-9]*"
+             >
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6">
       <label>Image Upload* <span style="color: red">(Mandatory)</span>&nbsp;</label>
       <p>
-        <input type="file" name="cd_image" ng2FileSelect [(ngModel)]="model.cd_image" [uploader]="uploader" />
+        <input type="file" 
+               name="cd_image" 
+               ng2FileSelect [(ngModel)]="model.cd_image" 
+               [uploader]="uploader" 
+               />
       </p>
     </div>
 </div>
  <br>
-  <!-- <div class="row">
-      <div class="col-sm-8">
-        <button type="submit" class="btn btn-success" (click)="uploader.uploadAll()" 
-        [disabled]="!uploader.getNotUploadedItems().length || !f.valid">Save</button>
-        <a  class="btn btn-info" (click)="goBack()">Home</a>
-      </div>
-    </div> -->
 
     <div class="form-group text-center" >
         <div class="col-sm-offset-2 col-sm-12">
-            <button type="submit" class="btn btn-success" (click)="uploader.uploadAll()" 
-            [disabled]="!uploader.getNotUploadedItems().length || !f.valid">Save</button>
-            <a  class="btn btn-info" (click)="goBack()" style="margin-left: 1%;">Cancel</a>
+            <button type="submit" 
+                    class="btn btn-success" 
+                    (click)="uploader.uploadAll()" 
+                    [disabled]="!uploader.getNotUploadedItems().length || !f.valid"
+                    >Save
+            </button>
+            <a  class="btn btn-info" 
+                (click)="goBack()" 
+                style="margin-left: 1%;"
+                >Cancel
+            </a>
         </div>
        
       </div>
