--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,13 +7,21 @@
 </div>
 <div class="row text-right">
     <div class="col-md-4">
-        <input class="form-control" type="text" placeholder="Search enter text" name="search" [(ngModel)]="filter">      
+        <input class="form-control" 
+               type="text" 
+               placeholder="Search enter text" 
+               name="search" 
+               [(ngModel)]="filter"
+               >      
     </div>
     <div class="col-md-4">
         &nbsp;
     </div>
     <div class="col-md-4">
-        <a class="btn btn-success" routerLink="/add"><i class="fa fa-user-plus"></i> Add&nbsp;</a>
+        <a class="btn btn-success" 
+           routerLink="/add"
+           ><i class="fa fa-user-plus"></i> Add&nbsp;
+        </a>
     </div>
   </div>
 <br>
@@ -25,8 +33,6 @@
       <td>Last Name</td>
       <td>Mobile</td>
       <td>Email</td>
-      
-      
       <td width=275 align="center">Action</td>
     </tr>
   </thead>
@@ -37,15 +43,12 @@
          <td>{{contact.cd_last_name}}</td>
          <td>{{contact.cd_mobile_number}}</td>
          <td>{{contact.cd_email_id}}</td>
-         
-         
-        <td width=275 align="center"> 
+         <td width=275 align="center"> 
             <a class="btn btn-success" routerLink="/detail/{{contact.cd_id}}"><i class="fa fa-vcard-o"></i></a>
             <a class="btn btn-info" routerLink="/edit/{{contact.cd_id}}" style="margin-left:2%;"><i class="fa fa-edit"></i></a>
             <a class="btn btn-danger" (click)="deleteContact(contact.cd_id)" style="margin-left:2%;"><i class="fa fa-trash-o"></i></a>
-        </td>
+         </td>
      </tr>
-    
   </tbody>
 </table>
-  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+<pagination-controls (pageChange)="p = $event"></pagination-controls>
